# zzz-00067

./: .gitignore  README.md  pyproject.toml
.review_tmp/: bad_snapshot.json  rules_snapshot_run.json
.review_tmp/review_run/: bad_snapshot.json  rules_snapshot.json
.review_tmp/review_run/dst_ws/: legacy_one_export.csv  legacy_one_export.md
.review_tmp/review_run_a03/dst_ws/: legacy_one_export.csv  legacy_one_export.md
.review_tmp/review_run_a03/snapshots/: rules_snapshot.json
.review_tmp/review_run_a04_codex/: bad_snapshot.json
.review_tmp/review_run_a04_codex/snapshots/: prod_rules.json
.review_tmp/review_run_a05_codex/dst_ws/: legacy_export.md  points.csv
.review_tmp/review_run_a05_codex/snapshots/: prod_rules.json
.review_tmp/review_run_a06_codex/: bad_snapshot.json
.review_tmp/review_run_a06_codex/bad_dst/: points.csv
.review_tmp/review_run_a06_codex/dst_ws/: points.csv
.review_tmp/workspace_a_run/: points.csv
.review_tmp/workspace_b_run/: legacy_one_after_preview.csv  legacy_one_before_preview.md
.review_tmp/workspace_b_seq/: notes.json
patrol_archiver/: annotation.py  archiver.py  cli.py  config.py  csv_import.py  exporter.py  models.py  preview.py  readme_quality_check.py  scanner.py  store.py
sample/: points_bad.csv  report.csv  report.md  report_v4.md  verify_report.csv  verify_report.md  verify_report2.csv  verify_report2.md
sample/.patrol-archiver/: config.json  current_batch.json
tests/: test_draft_cli.py  test_readme_consistency.py  test_snapshot.py  test_snapshot_cli.py  test_undo_and_version.py
(+16 files in other folders)
